--- a/library.properties
+++ b/library.properties
@@ -5,5 +5,5 @@ maintainer=nuMectro Technology <info@numectro.com>
 sentence=An Arduino library for programming nuMROBO robot made by nuMectro Technology.
 paragraph=nuMROBO is a modular robot designed & developed by nuMectro Technology, this library is used to program and control nuMROBO robot.
 category=Device Control
-url=https:
+url=https://github.com/nuMectro/nuMROBO
 architectures=*
